--- a/template/index.html
+++ b/template/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>p5.js Starter Project</title>
+    <title>forms with hands</title>
     <style>
     html,
     body {
@@ -27,7 +27,7 @@
 <body>
 <main>
     <div id="sketch"></div>
-    <a href="index.js">souce code</a>
+    <a href="index.js">source code</a>
     </main>
 		<script src="lib/ml5.1.2.1.min.js"></script>
 		<script src="lib/p5.min.js"></script>
